--- a/profilo.html
+++ b/profilo.html
@@ -221,60 +221,50 @@
       <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Skill 1 -->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/html-icon.png" alt="HTML" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">HTML</h3>
         </div>
         <!-- Skill 2 -->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/css-icon.png" alt="CSS" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">CSS</h3>
         </div>
         <!-- Skill 3 -->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/javascript-icon.png" alt="JAVASCRIPT" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">JAVASCRIPT(foundation)</h3>
         </div>
         <!-- Skill 5-->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/laravel-icon.png" alt="Laravel" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">Vue.js (learning)</h3>
         </div>
         <!-- Skill 4 -->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/php-icon.png" alt="PHP" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">PHP</h3>
         </div>
         <!-- Skill 5-->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/laravel-icon.png" alt="Laravel" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">LARAVEL</h3>
         </div>
         <!-- Skill 6 -->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/cpp-icon.png" alt="C++" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">MysQl</h3>
         </div>
         <!-- Skill 7-->
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/csharp-icon.png" alt="C#" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">Sqlite</h3>
         </div>
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/csharp-icon.png" alt="C#" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">Git & GitHub</h3>
         </div>
         <div
-          class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
-          <img src="path/to/csharp-icon.png" alt="C#" class="mx-auto">
+          class="bg-white dark:bg-gray-700 p-6 w-30 h-40 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow transform hover:scale-105 transition-transform">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">A+ & NETWORKING</h3>
         </div>
         <!-- Add more skills -->
