--- a/profilo.html
+++ b/profilo.html
@@ -280,14 +280,15 @@
       <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Project 1 -->
         <div class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
-          <img src="https://via.placeholder.com/400x200" alt="Project 1" class="rounded-lg">
+          <img src="./photo/todoapp.png" alt="Project 1" class="rounded-lg">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">MyToDoApp</h3>
           <p class="mt-2 text-gray-600 dark:text-gray-300">A laravel CRUD web application for managing tasks.</p>
           <a href="#" class="mt-4 inline-block text-purple-600 hover:underline">View Project</a>
         </div>
+
         <!-- Project 2 -->
         <div class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow">
-          <img src="https://via.placeholder.com/400x200" alt="Project 2" class="rounded-lg">
+          <img src="./photo/ecommercepho.png" alt="Project 2" class="rounded-lg">
           <h3 class="mt-4 text-xl font-bold text-purple-700 dark:text-purple-400">A -ecommerce</h3>
           <p class="mt-2 text-gray-600 dark:text-gray-300">An e-commerce site built with Laravel.</p>
           <a href="#" class="mt-4 inline-block text-purple-600 hover:underline">View Projec 2t</a>
