--- a/profilo.html
+++ b/profilo.html
@@ -346,25 +346,26 @@
       <p class="mt-4 text-xl">Feel free to reach out to me through any of the platforms below:</p>
       <BR></BR>
       <div class="mt-20 flex justify-center space-x-6">
-        <a href="https://www.facebook.com/yourprofile" target="_blank" class="text-white hover:text-purple-300">
+        <a href="" target="_blank" class="text-white hover:text-purple-300">
           <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
             <path
               d="M22.675 0h-21.35c-.733 0-1.325.592-1.325 1.325v21.351c0 .733.592 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.894-4.788 4.659-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.794.715-1.794 1.763v2.312h3.587l-.467 3.622h-3.12v9.294h6.116c.733 0 1.325-.591 1.325-1.324v-21.351c0-.733-.592-1.325-1.325-1.325z" />
           </svg>
         </a>
-        <a href="https://github.com/yourprofile" target="_blank" class="text-white hover:text-purple-300">
+        <a href="https://github.com/RANNAIN/RANNAIN" target="_blank" class="text-white hover:text-purple-300">
           <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
             <path
               d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.744.083-.729.083-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.775.418-1.305.76-1.605-2.665-.305-5.466-1.332-5.466-5.93 0-1.31.467-2.38 1.235-3.22-.123-.303-.535-1.527.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.983-.399 3.005-.404 1.02.005 2.048.138 3.006.404 2.29-1.552 3.297-1.23 3.297-1.23.653 1.649.241 2.873.118 3.176.77.84 1.233 1.91 1.233 3.22 0 4.61-2.803 5.62-5.475 5.92.43.37.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .322.218.694.825.576 4.765-1.587 8.2-6.084 8.2-11.386 0-6.627-5.373-12-12-12z" />
           </svg>
         </a>
-        <a href="mailto:your-email@example.com" class="text-white hover:text-purple-300">
+        <a href="yann52943@gmail.com" class="text-white hover:text-purple-300">
           <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
             <path
               d="M12 12.713l-11.985-7.713h23.97l-11.985 7.713zm-12-8.713v16h24v-16h-24zm12 10.287l-12-7.287v14.287h24v-14.287l-12 7.287z" />
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-white hover:text-purple-300">
+        <a href="https://www.linkedin.com/in/yan-naing-05a409243" target="_blank"
+          class="text-white hover:text-purple-300">
           <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
             <path
               d="M22.23 0h-20.46c-.974 0-1.77.796-1.77 1.77v20.46c0 .974.796 1.77 1.77 1.77h20.46c.974 0 1.77-.796 1.77-1.77v-20.46c0-.974-.796-1.77-1.77-1.77zm-15.538 20.452h-3.077v-10.769h3.077v10.769zm-1.538-12.308c-.987 0-1.79-.803-1.79-1.79s.803-1.79 1.79-1.79 1.79.803 1.79 1.79-.803 1.79-1.79 1.79zm13.846 12.308h-3.077v-5.385c0-1.282-.026-2.923-1.785-2.923-1.785 0-2.058 1.396-2.058 2.835v5.473h-3.077v-10.769h2.949v1.474h.042c.41-.776 1.41-1.59 2.899-1.59 3.099 0 3.669 2.04 3.669 4.692v6.193z" />
