--- a/profilo.html
+++ b/profilo.html
@@ -206,7 +206,7 @@
         Additionally, I have a keen interest in other programming languages such as C# and possess a solid understanding
         of frontend development.
       </p><br>
-      <p class="text-center"> Download my CV <a href="./resume/Yan Naing Win Resume of landscape.pdf"
+      <p class="text-center"> Download my CV <a href="mynewresume.html"
           class="text-purple-600 py-2 px-4 hover:underline font-bold">DOWNLOAD
           HERE</a>.
       </p>
